kuard/alpaca-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-prod
  labels:
    app: "alpaca"
    ver: "1"
    env: "prod"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alpaca
      ver: "1"
      env: prod
  template:
    metadata:
      labels:
        app: alpaca
        ver: "1"
        env: prod
    spec:
      containers:
        - name: nginx-container
          image: gcr.io/kuar-demo/kuard-amd64:blue
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
---
