kuard/alpaca-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-test
  labels:
    app: "alpaca"
    ver: "2"
    env: "test"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "alpaca"
      ver: "2"
      env: "test"
  template:
    metadata:
      labels:
        app: "alpaca"
        ver: "2"
        env: "test"
    spec:
      containers:
        - name: nginx-container
          image: gcr.io/kuar-demo/kuard-amd64:green
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
