kuard/alpaca-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alpaca
    env: test
    ver: "2"
  name: alpaca-test
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: alpaca
    env: test
    ver: "2"
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
