kuard/bandicoot-staging-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bandicoot
    env: staging
    ver: "2"
  name: bandicoot-staging
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bandicoot
    env: staging
    ver: "2"
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
