kuard/nginx-ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   traefik.ingress.kubernetes.io/service-weights: |
  #     alpaca-prod: 50%
  #     alpaca-test: 50%
  name: canary-ingress
spec:
  rules:
  - host: mylab.local
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: alpaca-prod
              port:
                number: 8080
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: alpaca-test
              port:
                number: 8080
